kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dam-plugin
  labels:
    app: dam-plugin
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: dam-plugin
---
apiVersion: v1
kind: Service
metadata:
  name: dam-plugin-nodeport
  labels:
    app: dam-plugin
spec:
  type: NodePort
  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 30300
    protocol: TCP
    name: http
  selector:
    app: dam-plugin
